# shell

./: shell.qml
components/controls/: Menu.qml  SplitButton.qml
config/: BarConfig.qml  Config.qml  LauncherConfig.qml  LauncherConfig.qml.bak  UtilitiesConfig.qml
modules/: Shortcuts.qml
modules/bar/: Bar.qml
modules/bar/components/: StatusIcons.qml
modules/bar/popouts/: Content.qml  TimerPopout.qml  Wrapper.qml
modules/controlcenter/taskbar/: TaskbarPane.qml
modules/dashboard/: Content.qml  Media.qml  Wrapper.qml
modules/dashboard/dash/: Media.qml
modules/drawers/: Interactions.qml
modules/launcher/: AppList.qml  AppList.qml.bak  Content.qml
modules/launcher/items/: SettingsItem.qml  TimerItem.qml  WebSearchItem.qml  WebSearchItem.qml.bak
modules/launcher/services/: WebSearch.qml  WebSearch.qml.bak
modules/nexus/: NexusState.qml  PageCompRegistry.qml  SettingsSearcher.qml
modules/nexus/common/: PageBase.qml
modules/nexus/navpane/: NavLocations.qml
modules/nexus/pages/: AboutPage.qml  NetworkPage.qml
modules/nexus/pages/network/: AddNetworkPage.qml  AddVpnPage.qml  NetworkDetailPage.qml  VpnPage.qml
modules/utilities/: Content.qml  Wrapper.qml
modules/utilities/cards/: Record.qml  Toggles.qml
plugin/src/Caelestia/: CMakeLists.txt  cutils.cpp  cutils.hpp
scripts/: build-settings-index.py
services/: Nmcli.qml  NotifData.qml  Notifs.qml  PomodoroTimer.qml  Recorder.qml  VPN.qml
utils/: Icons.qml
utils/scripts/: settings-indexer.js
